fix labels spacing for non-required fields

--- a/viite-UI/src/less/core/forms.less
+++ b/viite-UI/src/less/core/forms.less
@@ -132,7 +132,7 @@ input[type="checkbox"]:focus {
   margin-bottom: @input-margin-short;
 }
 
-.form-group-node-metadata{
+.form-group-node-input-metadata{
   margin-top: @input-margin-short;
   margin-bottom: @input-margin-short;
   label{
@@ -140,6 +140,17 @@ input[type="checkbox"]:focus {
     font-size: 11px;
     line-height: 15px;
     color: @warning !important;
+    text-transform: none;
+  }
+}
+
+ .form-group-node-static-metadata{
+  margin-top: @input-margin-short;
+  margin-bottom: @input-margin-short;
+  label{
+    width: 82px;
+    font-size: 11px;
+    line-height: 15px;
     text-transform: none;
   }
 }
